# teem-study-rust

./: .env  Cargo.toml
sql/: add_pane.sql  get_pane.sql  save_pane.sql  schema.sql
src/: config.rs  errors.rs  main.rs
src/agent/: common.rs  mod.rs
src/panel/: mod.rs  model.rs
src/panes/: db.rs  handlers.rs  mod.rs
src/realtimeperf/: mod.rs  model.rs
